Updates to runtime
Fixed issue with cmoputed and null flavor operations